--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -7,7 +7,7 @@
     tools:context=".Actividades.BienvenidaActivity">
 
     <TextView
-        android:id="@+id/textViewTituloFav"
+        android:id="@+id/textViewFechaVMT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTituloFav" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewFechaVMT" />
 
     <Button
         android:id="@+id/button2"
