--- a/app/src/main/res/layout/fila_favoritos.xml
+++ b/app/src/main/res/layout/fila_favoritos.xml
@@ -25,7 +25,7 @@
         android:id="@+id/textViewFechaFav"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="TextView"
@@ -36,17 +36,34 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonFav"
-        android:layout_width="wrap_content"
+        android:id="@+id/buttonQuitarFav"
+        android:layout_width="102dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:onClick="onClickQuitar"
         android:text="Quitar"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textViewFechaFav"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonComentariosFav"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/buttonComentariosFav"
+        android:layout_width="102dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:onClick="onClickComentarios"
+        android:text="Comentarios"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textViewFechaFav"
+        app:layout_constraintTop_toTopOf="@+id/imageViewPortadaFav"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
