Traducciones añadidas a strings.xml

--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:onClick="onClickCatalogo"
-        android:text="Ver catálogo de peliculas"
+        android:text="@string/VerCatalogoPeliculas"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,7 +40,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:onClick="onClickFavoritos"
-        android:text="Ver listas de favoritos"
+        android:text="@string/VerListasFavoritos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:onClick="onClickVerMasTarde"
-        android:text="Ver mas tarde"
+        android:text="@string/VerMasTarde"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
