--- a/app/src/main/res/layout/fila_favoritos.xml
+++ b/app/src/main/res/layout/fila_favoritos.xml
@@ -43,7 +43,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:onClick="onClickQuitar"
-        android:text="Quitar"
+        android:text="@string/Quitar"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:onClick="onClickComentarios"
-        android:text="Comentarios"
+        android:text="@string/ComentariosBoton"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
