--- a/app/src/main/res/layout/activity_catalogo.xml
+++ b/app/src/main/res/layout/activity_catalogo.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="CATÁLOGO DE PELÍCULAS"
+        android:text="@string/Catalogo"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Buscar por título..."
+        android:hint="@string/BuscarPorTitulo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,7 +52,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:onClick="onClickBuscar"
-        android:text="Buscar"
+        android:text="@string/Buscar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/editTextBuscador"
