--- a/app/src/main/res/layout/activity_comentarios.xml
+++ b/app/src/main/res/layout/activity_comentarios.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="COMENTARIOS DE LA PELÍCULA"
+        android:text="@string/ComentariosPelicula"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -51,7 +51,7 @@
         android:layout_marginEnd="20dp"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="Escribir comentarios..."
+        android:hint="@string/EscribirComentarios"
         android:inputType="textMultiLine"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="Comentarios:"
+        android:text="@string/Comentarios"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewPortadaC" />
 
@@ -79,7 +79,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:onClick="onClickGuardar"
-        android:text="Guardar"
+        android:text="@string/Guardar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
