--- a/app/src/main/res/layout/activity_favoritos.xml
+++ b/app/src/main/res/layout/activity_favoritos.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="LISTAS DE PELICULAS FAVORITAS"
+        android:text="@string/ListaPeliculasFavoritas"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
