--- a/app/src/main/res/layout/anadir_lista_fav.xml
+++ b/app/src/main/res/layout/anadir_lista_fav.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="Introduce el nombre de la nueva lista:"
+        android:text="@string/IntroducirNombreLista"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
         android:ems="10"
-        android:hint="Escribir nombre..."
+        android:hint="@string/EscribirNombre"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
