--- a/app/src/main/res/layout/fila_ver_mas_tarde.xml
+++ b/app/src/main/res/layout/fila_ver_mas_tarde.xml
@@ -58,7 +58,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:text="Fecha programada:"
+        android:text="@string/FechaProgramada"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewPortadaVMT"
@@ -73,7 +73,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:onClick="onClickQuitar"
-        android:text="Quitar"
+        android:text="@string/Quitar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
