--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,21 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/opcion1"
+        android:id="@+id/opcionFav"
         android:icon="@drawable/star"
-        android:title="Favoritos"
+        android:title="@string/Favoritos"
         app:showAsAction="ifRoom|withText" />
-
     <item
-        android:id="@+id/opcion2"
+        android:id="@+id/opcionVMT"
         android:icon="@drawable/watchlater"
-        android:title="Ver más tarde"
+        android:title="@string/VerMasTarde"
         app:showAsAction="ifRoom|withText" />
 
     <item
-        android:id="@+id/opcion3"
+        android:id="@+id/opcionPreferencias"
         android:icon="@android:drawable/ic_menu_preferences"
-        android:title="Preferencias"
+        android:title="@string/MostrarOcultarPreferencias"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/opcionCerrarSesion"
+        android:icon="@android:drawable/ic_lock_power_off"
+        android:title="@string/CerrarSesion"
         app:showAsAction="never" />
 
 </menu>
