--- a/app/src/main/res/layout-land/activity_comentarios.xml
+++ b/app/src/main/res/layout-land/activity_comentarios.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/textView9"
+        style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -26,15 +27,17 @@
         app:layout_constraintEnd_toStartOf="@+id/editTextComentarios"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.29000002"
+        app:layout_constraintVertical_bias="0.100000024"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textViewTituloC"
+        style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="TextView"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageViewPortadaC"
         app:layout_constraintHorizontal_bias="0.549"
@@ -44,7 +47,7 @@
     <EditText
         android:id="@+id/editTextComentarios"
         android:layout_width="500dp"
-        android:layout_height="180dp"
+        android:layout_height="135dp"
         android:layout_marginTop="10dp"
         android:ems="10"
         android:gravity="start|top"
@@ -58,6 +61,7 @@
 
     <TextView
         android:id="@+id/textView16"
+        style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Comentarios"
@@ -66,6 +70,7 @@
 
     <Button
         android:id="@+id/buttonGuardarComentarios"
+        style="@style/CustomStyleParaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
