--- a/app/src/main/res/layout/activity_favoritos.xml
+++ b/app/src/main/res/layout/activity_favoritos.xml
@@ -8,18 +8,21 @@
 
     <Spinner
         android:id="@+id/spinnerFavoritos"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:textAlignment="viewEnd"
+        android:theme="@style/CustomStyleParaSpinner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView13"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView11"
+        style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -44,6 +47,7 @@
 
     <TextView
         android:id="@+id/textView13"
+        style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
