--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Actividades.BienvenidaActivity">
+    tools:context=".Actividades.MainActivity">
 
     <Button
-        android:id="@+id/buttonQuitarFav"
+        android:id="@+id/buttonVerCatalogo"
+        style="@style/CustomStyleParaButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:onClick="onClickCatalogo"
         android:text="@string/VerCatalogoPeliculas"
@@ -22,7 +23,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewBienvenida" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonVerFavoritos"
+        style="@style/CustomStyleParaButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -33,10 +35,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonQuitarFav" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonVerCatalogo" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonVerMasTarde"
+        style="@style/CustomStyleParaButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -48,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/buttonVerFavoritos"
         app:layout_constraintVertical_bias="0.0" />
 
     <fragment
@@ -62,11 +65,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/buttonVerMasTarde"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewBienvenida"
+        style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -82,6 +86,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarPrincipal"
+        style="@style/CustomStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
