--- a/app/src/main/res/layout/fila_favoritos.xml
+++ b/app/src/main/res/layout/fila_favoritos.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants"
+    android:background="#7CE6E8E8"
     >
 
 
@@ -23,13 +24,14 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textViewFechaFav"
+        android:id="@+id/textViewTituloFav"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +41,7 @@
 
     <Button
         android:id="@+id/buttonQuitarFav"
+        style="@style/CustomStyleParaButton"
         android:layout_width="102dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -51,6 +54,7 @@
 
     <Button
         android:id="@+id/buttonComentariosFav"
+        style="@style/CustomStyleParaButton"
         android:layout_width="102dp"
         android:layout_height="wrap_content"
         android:onClick="onClickComentarios"
