--- a/app/src/main/res/layout/fila_ver_mas_tarde.xml
+++ b/app/src/main/res/layout/fila_ver_mas_tarde.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants"
+    android:background="#7CE6E8E8"
     >
 
 
@@ -42,12 +43,14 @@
         android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageViewPortadaVMT"
         app:layout_constraintStart_toStartOf="@+id/imageViewPortadaVMT"
         app:layout_constraintTop_toBottomOf="@+id/imageViewPortadaVMT"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <TextView
         android:id="@+id/textViewTituloFav3"
@@ -62,6 +65,7 @@
 
     <Button
         android:id="@+id/buttonVMT"
+        style="@style/CustomStyleParaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickQuitar"
