--- a/app/src/main/res/layout/fragment_catalogo.xml
+++ b/app/src/main/res/layout/fragment_catalogo.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/textView2"
+        style="@style/CustomStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -46,12 +47,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
+        style="@style/CustomStyleParaButton"
         android:id="@+id/buttonBuscar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
-        android:onClick="onClickBuscarFragment"
         android:text="@string/Buscar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
